Add ApiResource endpoint
Add FE-code to add ApiResource
