# frontend/swagger.yaml
@@ -56,6 +56,46 @@ paths:
             text/json:
               schema:
                 type: string
+  /ApiResource:
+    get:
+      tags:
+        - ApiResource
+      responses:
+        '200':
+          description: Success
+          content:
+            text/plain:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/ApiResource'
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/ApiResource'
+            text/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/ApiResource'
+    post:
+      tags:
+        - ApiResource
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/ApiResource'
+          text/json:
+            schema:
+              $ref: '#/components/schemas/ApiResource'
+          application/*+json:
+            schema:
+              $ref: '#/components/schemas/ApiResource'
+      responses:
+        '200':
+          description: Success
 components:
   schemas:
     LoginRequest:
@@ -77,4 +117,136 @@ components:
         logoutId:
           type: string
           nullable: true
+      additionalProperties: false
+    ApiResourceSecret:
+      type: object
+      properties:
+        id:
+          type: integer
+          format: int32
+        description:
+          type: string
+          nullable: true
+        value:
+          type: string
+          nullable: true
+        expiration:
+          type: string
+          format: date-time
+          nullable: true
+        type:
+          type: string
+          nullable: true
+        created:
+          type: string
+          format: date-time
+        apiResourceId:
+          type: integer
+          format: int32
+        apiResource:
+          $ref: '#/components/schemas/ApiResource'
+      additionalProperties: false
+    ApiResourceScope:
+      type: object
+      properties:
+        id:
+          type: integer
+          format: int32
+        scope:
+          type: string
+          nullable: true
+        apiResourceId:
+          type: integer
+          format: int32
+        apiResource:
+          $ref: '#/components/schemas/ApiResource'
+      additionalProperties: false
+    ApiResourceClaim:
+      type: object
+      properties:
+        id:
+          type: integer
+          format: int32
+        type:
+          type: string
+          nullable: true
+        apiResourceId:
+          type: integer
+          format: int32
+        apiResource:
+          $ref: '#/components/schemas/ApiResource'
+      additionalProperties: false
+    ApiResourceProperty:
+      type: object
+      properties:
+        id:
+          type: integer
+          format: int32
+        key:
+          type: string
+          nullable: true
+        value:
+          type: string
+          nullable: true
+        apiResourceId:
+          type: integer
+          format: int32
+        apiResource:
+          $ref: '#/components/schemas/ApiResource'
+      additionalProperties: false
+    ApiResource:
+      type: object
+      properties:
+        id:
+          type: integer
+          format: int32
+        enabled:
+          type: boolean
+        name:
+          type: string
+          nullable: true
+        displayName:
+          type: string
+          nullable: true
+        description:
+          type: string
+          nullable: true
+        allowedAccessTokenSigningAlgorithms:
+          type: string
+          nullable: true
+        showInDiscoveryDocument:
+          type: boolean
+        secrets:
+          type: array
+          items:
+            $ref: '#/components/schemas/ApiResourceSecret'
+          nullable: true
+        scopes:
+          type: array
+          items:
+            $ref: '#/components/schemas/ApiResourceScope'
+          nullable: true
+        userClaims:
+          type: array
+          items:
+            $ref: '#/components/schemas/ApiResourceClaim'
+          nullable: true
+        properties:
+          type: array
+          items:
+            $ref: '#/components/schemas/ApiResourceProperty'
+          nullable: true
+        created:
+          type: string
+          format: date-time
+        updated:
+          type: string
+          format: date-time
+          nullable: true
+        lastAccessed:
+          type: string
+          format: date-time
+          nullable: true
+        nonEditable:
+          type: boolean
       additionalProperties: false
